[package]
name = "fsvacuum"
version = "0.1.0"
edition = "2021"
authors = ["Sean Ray"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ignore = "0.4.18"
num_cpus = "1.13.1"
crossbeam-channel = "0.5"
lazy_static = "1.4.0"
dirs = "4.0.0"

[profile.release]
lto = "fat"
strip = true
